--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "uuuf",
-  "version": "0.0.6",
+  "name": "libuuuf",
+  "version": "0.0.1",
   "description": "Undoubtedly Useful Utility Functions",
   "main": "uuuf.js",
   "directories": {
